test/syc/bad/duparg.c
/*
 * Duplicate argument identifier
 */

int foo(int a, int a)
{
	return 0;
}
